Add card and images

--- a/index.html
+++ b/index.html
@@ -11,56 +11,94 @@
   </head>
   <body>
 
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
-          <div class="col">
-            <p class="title">Your EMP Back OfficeTour</p>
-            <p class="info">Live 15 minutes of daily motivation, inspiration and education with EMP & World business leaders! Recommending.</p>
-            <a href="" alt="EMP Back OfficeTour">LEARN MORE</a>
+          <div class="col-lg-3">
+            <div class="card" style="width: 18rem;">
+              <img src="images/building.svg" class="card-img-top" width="100" height="100">
+              <div class="card-body">
+                <h5 class="card-title">Your EMP Back OfficeTour</h5>
+                <p class="card-text">Live 15 minutes of daily motivation, inspiration and education with EMP & World business leaders! Recommending.</p>
+                <a class="btn btn-secondary"  href="" alt="EMP Back OfficeTour" role="button">LEARN MORE</a>
+              </div>
+            </div>
           </div>
 
-          <div class="col">
-            <p class="title">An Overview of Insider Tools & Benefits</p>
-            <p class="info">Live 15 minutes of daily motivation, inspiration and education with EMP & World business leaders! Recommending.</p>
-            <a href="" alt="Insider tools">LEARN MORE</a>
+          <div class="col-lg-3">
+            <div class="card" style="width: 18rem;">
+              <img src="images/asset-management.svg" class="card-img-top" width="100" height="100">
+              <div class="card-body">
+                <h5 class="card-title">An Overview of Insider Tools & Benefits</h5>
+                <p class="card-text">Live 15 minutes of daily motivation, inspiration and education with EMP & World business leaders! Recommending.</p>
+                <a class="btn btn-secondary" href="" alt="Insider tools" role="button">LEARN MORE</a>
+              </div>
+            </div>
           </div>
 
-          <div class="col">
-            <p class="title">The EMP Afflicate Compensation Plan</p>
-            <p class="info">Live 15 minutes of daily motivation, inspiration and education with EMP & World business leaders! Recommending.</p>
-            <a href="" alt="Affliate">LEARN MORE</a>
+          <div class="col-lg-3">
+            <div class="card" style="width: 18rem;">
+              <img src="images/clipboard.svg" class="card-img-top" width="100" height="100">
+              <div class="card-body">
+                <h5 class="card-title">The EMP Afflicate Compensation Plan</h5>
+                <p class="card-text">Live 15 minutes of daily motivation, inspiration and education with EMP & World business leaders! Recommending.</p>
+                <a class="btn btn-secondary" href="" alt="Affliate" role="button">LEARN MORE</a>
+              </div>
+            </div>
           </div>
 
-          <div class="col">
-            <p class="title">How The EMP Coaching</p>
-            <p class="info">Live 15 minutes of daily motivation, inspiration and education with EMP & World business leaders! Recommending.</p>
-            <a href="" alt="Coaching">LEARN MORE</a>
+          <div class="col-lg-3">
+            <div class="card" style="width: 18rem;">
+              <img src="images/dollar.svg" class="card-img-top" width="100" height="100">
+              <div class="card-body">
+                <h5 class="card-title">How The EMP Coaching</h5>
+                <p class="card-text">Live 15 minutes of daily motivation, inspiration and education with EMP & World business leaders! Recommending.</p>
+                <a class="btn btn-secondary" href="" alt="Coaching" role="button">LEARN MORE</a>
+              </div>
+            </div>
           </div>
         </div>
 
         <div class="row">
-          <div class="col">
-            <p class="title">How To Refer People & Make Money</p>
-            <p class="info">Live 15 minutes of daily motivation, inspiration and education with EMP & World business leaders! Recommending.</p>
-            <a href="" alt="Money">LEARN MORE</a>
+          <div class="col-lg-3">
+            <div class="card" style="width: 18rem;">
+              <img src="images/return-of-investment.svg" class="card-img-top" width="100" height="100">
+              <div class="card-body">
+                <h5 class="card-title">How To Refer People & Make Money</h5>
+                <p class="card-text">Live 15 minutes of daily motivation, inspiration and education with EMP & World business leaders! Recommending.</p>
+                <a class="btn btn-secondary" href="" alt="Money" role="button">LEARN MORE</a>
+              </div>
+            </div>
           </div>
 
-          <div class="col">
-            <p class="title">How To Get Help & Support</p>
-            <p class="info">Live 15 minutes of daily motivation, inspiration and education with EMP & World business leaders! Recommending.</p>
-            <a href="" alt="Support">LEARN MORE</a>
+          <div class="col-lg-3">
+            <div class="card" style="width: 18rem;">
+              <img src="images/leadership.svg" class="card-img-top" width="100" height="100">
+              <div class="card-body">
+                <h5 class="card-title">How To Get Help & Support</h5>
+                <p class="card-text">Live 15 minutes of daily motivation, inspiration and education with EMP & World business leaders! Recommending.</p>
+                <a class="btn btn-secondary" href="" alt="Support" role="button">LEARN MORE</a>
+              </div>
+            </div>
           </div>
 
-          <div class="col">
-            <p class="title">Getting Started: The Essential Trainings</p>
-            <p class="info">Live 15 minutes of daily motivation, inspiration and education with EMP & World business leaders! Recommending.</p>
-            <a href="" alt="Essential">LEARN MORE</a>
+          <div class="col-lg-3">
+            <div class="card" style="width: 18rem;">
+              <img src="images/recruitment.svg" class="card-img-top" width="100" height="100">
+              <div class="card-body">
+                <h5 class="class-title">Getting Started: The Essential Trainings</h5>
+                <p class="class-text">Live 15 minutes of daily motivation, inspiration and education with EMP & World business leaders! Recommending.</p>
+                <a class="btn btn-secondary" href="" alt="Essential" role="button">LEARN MORE</a>
+              </div>
+            </div>
           </div>
 
-          <div class="col">
-            <p class="title">The Fastest Way To Get Your First Sale</p>
-            <p class="info">Live 15 minutes of daily motivation, inspiration and education with EMP & World business leaders! Recommending.</p>
-            <a href="" alt="First sale">LEARN MORE</a>
+          <div class="col-lg-3">
+            <div class="card" style="width: 18rem;">
+              <img src="images/finance.svg" class="card-img-top" width="100" height="100">
+              <div class="card-body">
+                <h5 class="card-title">The Fastest Way To Get Your First Sale</h5>
+                <p class="card-text">Live 15 minutes of daily motivation, inspiration and education with EMP & World business leaders! Recommending.</p>
+                <a class="btn btn-secondary" href="" alt="First sale" role="button">LEARN MORE</a>
           </div>
         </div>
        
