--- a/index.html
+++ b/index.html
@@ -12,46 +12,50 @@
   <body style="background-color: rgb(229, 242, 247);">
 
     <div class="container" >
-        <div class="row mt-5">
-          <div class="col-lg-3">
-            <div class="card text-center" >
+      <div class="row mt-5">
+          <div class="col-md-3 mt-2">
+            <div class="card text-center " >
               <img src="images/building.svg" class="card-img-top mt-3" width="70" height="70">
               <div class="card-body">
                 <h5 class="card-title">Your EMP Back OfficeTour</h5>
                 <p class="card-text" style="font-size: small;">Live 15 minutes of daily motivation, inspiration and education with EMP & World business leaders! Recommending.</p>
+                <hr width="50%">
                 <a class="btn btn-info"  href="" alt="EMP Back OfficeTour" role="button">LEARN MORE</a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3">
+          <div class="col-md-3 mt-2">
             <div class="card text-center" >
               <img src="images/asset-management.svg" class="card-img-top mt-3" width="70" height="70">
               <div class="card-body">
                 <h5 class="card-title">An Overview of Insider Tools & Benefits</h5>
                 <p class="card-text" style="font-size: small;">Live 15 minutes of daily motivation, inspiration and education with EMP & World business leaders! Recommending.</p>
+                <hr width="50%">
                 <a class="btn btn-info" href="" alt="Insider tools" role="button">LEARN MORE</a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3">
+          <div class="col-md-3 mt-2">
             <div class="card text-center" >
               <img src="images/clipboard.svg" class="card-img-top mt-3" width="70" height="70">
               <div class="card-body">
                 <h5 class="card-title">The EMP Afflicate Compensation Plan</h5>
                 <p class="card-text" style="font-size: small;">Live 15 minutes of daily motivation, inspiration and education with EMP & World business leaders! Recommending.</p>
+                <hr width="50%">
                 <a class="btn btn-info" href="" alt="Affliate" role="button">LEARN MORE</a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3">
+          <div class="col-md-3 mt-2">
             <div class="card text-center" >
               <img src="images/dollar.svg" class="card-img-top mt-3" width="70" height="70">
               <div class="card-body">
                 <h5 class="card-title">How The EMP Coaching</h5>
                 <p class="card-text" style="font-size: small;">Live 15 minutes of daily motivation, inspiration and education with EMP & World business leaders! Recommending.</p>
+                <hr width="50%">
                 <a class="btn btn-info" href="" alt="Coaching" role="button">LEARN MORE</a>
               </div>
             </div>
@@ -59,49 +63,55 @@
         </div>
 
         <div class="row mt-4">
-          <div class="col-lg-3">
+          <div class="col-md-3 mt-2">
             <div class="card text-center" >
               <img src="images/return-of-investment.svg" class="card-img-top mt-3" width="70" height="70">
               <div class="card-body">
                 <h5 class="card-title">How To Refer People & Make Money</h5>
                 <p class="card-text" style="font-size: small;">Live 15 minutes of daily motivation, inspiration and education with EMP & World business leaders! Recommending.</p>
+                <hr width="50%">
                 <a class="btn btn-info" href="" alt="Money" role="button">LEARN MORE</a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3">
+          <div class="col-md-3 mt-2">
             <div class="card text-center" >
               <img src="images/leadership.svg" class="card-img-top mt-3" width="70" height="70">
               <div class="card-body">
                 <h5 class="card-title">How To Get Help & Support</h5>
                 <p class="card-text" style="font-size: small;">Live 15 minutes of daily motivation, inspiration and education with EMP & World business leaders! Recommending.</p>
+                <hr width="50%">
                 <a class="btn btn-info" href="" alt="Support" role="button">LEARN MORE</a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3">
+          <div class="col-md-3 mt-2">
             <div class="card text-center" >
               <img src="images/recruitment.svg" class="card-img-top mt-3" width="70" height="70">
               <div class="card-body">
                 <h5 class="class-title">Getting Started: The Essential Trainings</h5>
                 <p class="class-text" style="font-size: small;">Live 15 minutes of daily motivation, inspiration and education with EMP & World business leaders! Recommending.</p>
+                <hr width="50%">
                 <a class="btn btn-info" href="" alt="Essential" role="button">LEARN MORE</a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3">
+          <div class="col-md-3 mt-2">
             <div class="card text-center" >
               <img src="images/finance.svg" class="card-img-top mt-3" width="70" height="70">
               <div class="card-body">
                 <h5 class="card-title">The Fastest Way To Get Your First Sale</h5>
                 <p class="card-text" style="font-size: small;">Live 15 minutes of daily motivation, inspiration and education with EMP & World business leaders! Recommending.</p>
+                <hr width="50%">
                 <a class="btn btn-info" href="" alt="First sale" role="button">LEARN MORE</a>
+              </div>
+            </div>
           </div>
         </div>
-       
+      </div>
       
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
